added sonatype oss support

--- a/pom.xml
+++ b/pom.xml
@@ -5,6 +5,13 @@
     <groupId>com.github.danielwegener</groupId>
     <artifactId>xjc-immutable-plugin</artifactId>
     <version>0.1-SNAPSHOT</version>
+    <packaging>jar</packaging>
+    <parent>
+        <groupId>org.sonatype.oss</groupId>
+        <artifactId>oss-parent</artifactId>
+        <version>7</version>
+    </parent>
+
     <licenses>
         <license>
             <name>Apache License, Version 2.0</name>
