--- a/pom.xml
+++ b/pom.xml
@@ -79,7 +79,6 @@
         <profile>
             <id>selftest</id>
             <build>
-
                 <plugins>
                     <plugin>
                         <groupId>org.jvnet.jax-ws-commons</groupId>
@@ -147,51 +146,26 @@
                         </dependencies>
                     </plugin>
                 </plugins>
-
             </build>
         </profile>
-
 
     </profiles>
 
     <build>
         <plugins>
-            <!-- <plugin>
-                 <groupId>com.github.github</groupId>
-                 <artifactId>downloads-maven-plugin</artifactId>
-                 <version>0.6</version>
-                 <configuration>
-                     <description>Official ${project.name} build of the ${project.version} release</description>
-                     <override>true</override>
-                     <includeAttached>true</includeAttached>
-                     <server>github</server>
-                 </configuration>
-                 <executions>
-                     <execution>
-                         <goals>
-                             <goal>upload</goal>
-                         </goals>
-                         <phase>install</phase>
-                     </execution>
-                 </executions>
-             </plugin>
-             <plugin>
-                 <groupId>com.github.github</groupId>
-                 <artifactId>site-maven-plugin</artifactId>
-                 <version>0.7</version>
-                 <configuration>
-                     <message>Building site for ${project.version}</message>
-                     <server>github</server>
-                 </configuration>
-                 <executions>
-                     <execution>
-                         <goals>
-                             <goal>site</goal>
-                         </goals>
-                         <phase>site</phase>
-                     </execution>
-                 </executions>
-             </plugin>  -->
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-gpg-plugin</artifactId>
+                <executions>
+                    <execution>
+                        <id>sign-artifacts</id>
+                        <phase>verify</phase>
+                        <goals>
+                            <goal>sign</goal>
+                        </goals>
+                    </execution>
+                </executions>
+            </plugin>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-site-plugin</artifactId>
