fixed scm section

--- a/pom.xml
+++ b/pom.xml
@@ -38,9 +38,9 @@
     </issueManagement>
 
     <scm>
-        <url>https://github.com/danielwegener/xml-immutable-plugin</url>
-        <connection>scm:git:git:///github.com/danielwegener/xml-immutable-plugin.git</connection>
-        <developerConnection>scm:git:git@/github.com/danielwegener/xml-immutable-plugin.git</developerConnection>
+        <url>scm:git:git@github.com:danielwegener/xml-immutable-plugin.git</url>
+        <connection>scm:git:git@github.com/danielwegener/xml-immutable-plugin.git</connection>
+        <developerConnection>scm:git:git@github.com/danielwegener/xml-immutable-plugin.git</developerConnection>
     </scm>
 
     <developers>
