--- a/pom.xml
+++ b/pom.xml
@@ -38,9 +38,9 @@
     </issueManagement>
 
     <scm>
-        <url>scm:git:git@github.com:danielwegener/xjc-immutable-plugin.git</url>
-        <connection>scm:git:git@github.com/danielwegener/xjc-immutable-plugin.git</connection>
-        <developerConnection>scm:git:git@github.com/danielwegener/xjc-immutable-plugin.git</developerConnection>
+        <connection>scm:git:git@github.com:danielwegener/xjc-immutable-plugin.git</connection>
+        <developerConnection>scm:git:git@github.com:danielwegener/xjc-immutable-plugin.git</developerConnection>
+        <url>git@github.com:danielwegener/xjc-immutable-plugin.git</url>
     </scm>
 
     <developers>
